tests/spec/fail/match_without_case.aja
match 1:
    default:
        print("x")
